[TASK] Refactor dakosy_reservations to t3events_course (naming only)

--- a/Documentation.tmpl/Settings.yml
+++ b/Documentation.tmpl/Settings.yml
@@ -18,7 +18,7 @@ conf.py:
     - null
   latex_documents:
   - - Index
-    - dakosy_reservations.tex
+    - t3events_course.tex
     - DAKOSY Reservations
     - Dirk Wenzel, Boerge Franck
     - manual
