--- a/.travis.yml
+++ b/.travis.yml
@@ -1,52 +1,50 @@
 language: php
 
-matrix: 
+matrix:
   include:
     - php: 5.5
-      env: DB=mysql TYPO3=TYPO3_6-2 INTEGRATION=master-t3events COVERAGE=0
+      env: TYPO3_VERSION=6.2.*
     - php: 5.6
-      env: DB=mysql TYPO3=master INTEGRATION=master COVERAGE=1
-services: 
-- memcached
-env: 
-  global: 
+      env: TYPO3_VERSION=7.6.*
+    - php: 7
+      env: TYPO3_VERSION=7.6.* COVERAGE=1
+
+env:
+  global:
     secure: S8QheEMVpSRsPPIhYQZ4tUCTbxpM7csZ0GydJaPY8p/FAEnZLiH6xcsiTGKOljva5HDelCdBvunaWtUO/+CdKIgsdbQGbqc1aWmG6gr+ShQk4X3KzeAA91AFmkJOR6Jv69lUTm6Uo9AKs1JtuVZsOa1aoOmfApohqFuXsRBNXlg=
-  matrix: 
-  - DB=mysql TYPO3=master INTEGRATION=master COVERAGE=0
-script: 
+
+cache:
+  directories:
+    - $HOME/.composer/cache
+
+before_install:
+  - composer self-update
+  - composer --version
+
+before_script:
+  - composer require typo3/cms=$TYPO3_VERSION
+  - git checkout composer.json
+  - export TYPO3_PATH_WEB=$PWD/.Build/Web
+
+script:
 - >
-  if [[ "$COVERAGE" == "0" ]]; then 
-    ./bin/phpunit --colors -c typo3conf/ext/t3events_course/Tests/Build/UnitTests.xml
+  if [[ "$COVERAGE" == "0" ]]; then
+    echo;
+    echo "Running unit tests";
+    .Build/bin/phpunit --colors -c Tests/Build/UnitTests.xml Tests/Unit/
   fi
 - >
   if [[ "$COVERAGE" == "1" ]]; then
     echo;
     echo "Running unit tests";
-    ./bin/phpunit --coverage-clover=build/artifacts/coverage/clover.xml -c typo3conf/ext/t3events_course/Tests/Build/UnitTests.xml
+    .Build/bin/phpunit --colors -c Tests/Build/UnitTests.xml Tests/Unit/ --coverage-clover .Build/log/coverage/clover.xml
   fi
-before_script: 
-- cd ..
-- mkdir -p build/artifacts/coverage
-- mkdir build/artifacts/logs
-- git clone --single-branch --branch $INTEGRATION --depth 1 git://github.com/dwenzel/TYPO3-Travis-Integration.git build-environment
-- git clone --single-branch --branch $TYPO3 --depth 1 https://github.com/TYPO3/TYPO3.CMS.git core
-- mv core/* .
-- composer self-update
-- composer install
-- mkdir -p uploads typo3temp typo3conf/ext
-- mv t3events_course ./typo3conf/ext/
-#- source build-environment/install-helper.sh
+
 after_script:
 - >
   if [[ "$COVERAGE" == "1" ]]; then
-    rm composer.json;
-    mv build-environment/composer.json ./;
     export COVERALLS_SERVICE_NAME=travis-ci;
-    cp -R typo3conf/ext/t3events_course/.git .;
-    cp typo3conf/ext/t3events_course/.coveralls.yml ./;
-    wget http://getcomposer.org/composer.phar;
-    php composer.phar update satooshi/php-coveralls --dev;
     echo;
     echo "Running coveralls";
-    php vendor/bin/coveralls -v;
+    .Build/bin/coveralls -v
   fi
