--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"type": "typo3-cms-extension",
 	"description": "Courses is an extension for the TYPO3 CMS. It extends t3events by functionality for managing courses.",
 	"keywords": ["TYPO3", "extension", "events", "course"],
-	"version": "0.1.0",
+	"version": "0.2.0",
 	"license": ["GPL-2.0+"],
 	"authors": [
 		{
@@ -16,7 +16,7 @@
 	],
 	"require": {
 		"typo3/cms": ">=6.2.0,<8.0",
-		"webfox/t3events": "0.17.*"
+		"webfox/t3events": "0.19.1"
 	},
 	"require-dev": {
     "mikey179/vfsStream": "1.4.*@dev",
@@ -52,7 +52,7 @@
   },
   "extra": {
 		"branch-alias": {
-			"dev-master": "0.1.x-dev"
+			"dev-master": "0.3.x-dev"
 		},
     "typo3/cms": {
       "cms-package-dir": "{$vendor-dir}/typo3/cms",
