--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
 	  {"type": "vcs", "url": "https://github.com/dwenzel/t3events.git"}
 	],
 	"require": {
-		"typo3/cms": ">=6.2.0,<8.0",
+		"typo3/cms-core": ">=6.2.0,<8.0",
 		"webfox/t3events": "0.19.1"
 	},
 	"require-dev": {
