--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
   ],
   "require": {
     "typo3/cms-core": ">=6.2.0,<8.0",
-    "dwenzel/t3events": "0.27.0"
+    "dwenzel/t3events": "^0.29.0"
   },
   "require-dev": {
     "mikey179/vfsStream": "1.4.*@dev",
