--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,16 @@
 language: php
 
 matrix:
+  fast_finish: true
   include:
     - php: 5.5
-      env: TYPO3_VERSION=6.2.*
+      env: TYPO3_VERSION=^6.2
     - php: 5.6
-      env: TYPO3_VERSION=7.6.*
-    - php: 7
-      env: TYPO3_VERSION=7.6.* COVERAGE=1
+      env: TYPO3_VERSION=^7.6
+    - php: 7.0
+      env: TYPO3_VERSION=^7.6 COVERAGE=1
+    - php: 7.0
+      env: TYPO3_VERSION=^8
 
 env:
   global:
@@ -28,11 +31,12 @@ before_script:
 
 script:
 - >
-  if [[ "$COVERAGE" == "0" ]]; then
+  if [[ "$COVERAGE" != "1" ]]; then
     echo;
     echo "Running unit tests";
     .Build/bin/phpunit --colors -c Tests/Build/UnitTests.xml Tests/Unit/
   fi
+
 - >
   if [[ "$COVERAGE" == "1" ]]; then
     echo;
@@ -48,3 +52,4 @@ after_script:
     echo "Running coveralls";
     .Build/bin/coveralls -v
   fi
+
