--- a/.travis.yml
+++ b/.travis.yml
@@ -55,7 +55,7 @@ script:
   export typo3DatabaseHost="localhost";
   export typo3DatabaseUsername="root";
   export typo3DatabasePassword="";
-  find 'Tests/Functional' -wholename '*Test.php' | parallel --gnu 'echo; echo "Running functional test suite {}"; .Build/bin/phpunit --colors  -c .Build/vendor/typo3/cms/typo3/sysext/core/Build/FunctionalTests.xml {}'
+  find 'Tests/Functional' -wholename '*Test.php' | parallel --gnu 'echo; echo "Running functional test suite {}"; .Build/bin/phpunit --coverage-clover=.Build/log/coverage/{}functionaltest.clover --colors  -c .Build/vendor/typo3/cms/typo3/sysext/core/Build/FunctionalTests.xml {}'
 
 after_script:
 - >
@@ -66,3 +66,8 @@ after_script:
     .Build/bin/coveralls -v
   fi
 
+after_success:
+- >
+  if [[ "$COVERAGE" == "1" ]]; then
+    bash <(curl -s https://codecov.io/bash)
+  fi
