--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ script:
   if [[ "$COVERAGE" == "1" ]]; then
     echo;
     echo "Running unit tests";
-    .Build/bin/phpunit --colors -c Tests/Build/UnitTests.xml Tests/Unit/ --coverage-clover .Build/log/coverage/clover.xml
+    .Build/bin/phpunit --colors -c Tests/Build/UnitTests.xml Tests/Unit/ --coverage-clover .Build/log/coverage/Unit/clover.xml
   fi
 
 - >
@@ -72,6 +72,6 @@ after_script:
 after_success:
 - >
   if [[ "$COVERAGE" == "1" ]]; then
-    bash <(curl -s https://codecov.io/bash) -f "*.clover" -F functional
-    bash <(curl -s https://codecov.io/bash) -F unit
+    bash <(curl -s https://codecov.io/bash) -s ./.Build/log/coverage/Tests/Functional/ -f "*.clover" -F functional
+    bash <(curl -s https://codecov.io/bash) -s ./.Build/log/coverage/Unit/ -F unit
   fi
