--- a/.travis.yml
+++ b/.travis.yml
@@ -42,14 +42,14 @@ script:
   if [[ "$COVERAGE" != "1" ]]; then
     echo;
     echo "Running unit tests";
-    .Build/bin/phpunit --colors -c Tests/Build/UnitTests.xml Tests/Unit/
+    .Build/bin/phpunit --colors -c .Build/vendor/nimut/testing-framework/res/Configuration/UnitTests.xml Tests/Unit/
   fi
 
 - >
   if [[ "$COVERAGE" == "1" ]]; then
     echo;
     echo "Running unit tests";
-    .Build/bin/phpunit --colors -c Tests/Build/UnitTests.xml Tests/Unit/ --coverage-clover .Build/log/coverage/Unit/clover.xml
+        .Build/bin/phpunit --colors -c .Build/vendor/nimut/testing-framework/res/Configuration/UnitTests.xml Tests/Unit/ --coverage-clover .Build/log/coverage/Unit/clover.xml
   fi
 
 - >
@@ -58,16 +58,7 @@ script:
   export typo3DatabaseHost="localhost";
   export typo3DatabaseUsername="root";
   export typo3DatabasePassword="";
-  find 'Tests/Functional' -wholename '*Test.php' | parallel --gnu 'echo; echo "Running functional test suite {}"; .Build/bin/phpunit --coverage-clover=.Build/log/coverage/{}functionaltest.clover --colors  -c .Build/vendor/typo3/cms/typo3/sysext/core/Build/FunctionalTests.xml {}'
-
-after_script:
-- >
-  if [[ "$COVERAGE" == "1" ]]; then
-    export COVERALLS_SERVICE_NAME=travis-ci;
-    echo;
-    echo "Running coveralls";
-    .Build/bin/coveralls -v
-  fi
+  find 'Tests/Functional' -wholename '*Test.php' | parallel --gnu 'echo; echo "Running functional test suite {}"; .Build/bin/phpunit --coverage-clover=.Build/log/coverage/{}functionaltest.clover --colors  -c vendor/nimut/testing-framework/res/Configuration/FunctionalTests.xml {}'
 
 after_success:
 - >
