--- a/.travis.yml
+++ b/.travis.yml
@@ -58,7 +58,7 @@ script:
   export typo3DatabaseHost="localhost";
   export typo3DatabaseUsername="root";
   export typo3DatabasePassword="";
-  find 'Tests/Functional' -wholename '*Test.php' | parallel --gnu 'echo; echo "Running functional test suite {}"; .Build/bin/phpunit --coverage-clover=.Build/log/coverage/{}functionaltest.clover --colors  -c vendor/nimut/testing-framework/res/Configuration/FunctionalTests.xml {}'
+  find 'Tests/Functional' -wholename '*Test.php' | parallel --gnu 'echo; echo "Running functional test suite {}"; .Build/bin/phpunit --coverage-clover=.Build/log/coverage/{}functionaltest.clover --colors  -c .Build/vendor/nimut/testing-framework/res/Configuration/FunctionalTests.xml {}'
 
 after_success:
 - >
