--- a/.travis.yml
+++ b/.travis.yml
@@ -28,10 +28,6 @@ cache:
   directories:
     - $HOME/.composer/cache
 
-before_install:
-  - composer self-update
-  - composer --version
-
 before_script:
   - composer require typo3/cms=$TYPO3_VERSION
   - git checkout composer.json
@@ -49,7 +45,7 @@ script:
   if [[ "$COVERAGE" == "1" ]]; then
     echo;
     echo "Running unit tests";
-        .Build/bin/phpunit --colors -c .Build/vendor/nimut/testing-framework/res/Configuration/UnitTests.xml Tests/Unit/ --coverage-clover .Build/log/coverage/Unit/clover.xml
+    .Build/bin/phpunit --colors -c Tests/Build/UnitTests.xml Tests/Unit/ --coverage-clover .Build/log/coverage/clover.xml
   fi
 
 - >
