--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     }
   ],
   "require": {
-    "typo3/cms": ">=6.2.0",
+    "typo3/cms-core": ">=6.2.0",
     "dwenzel/t3events": ">=0.31"
   },
   "require-dev": {
