--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,16 @@
 language: php
 
+sudo: false
+
 matrix:
   fast_finish: true
   include:
-    - php: 5.5
-      env: TYPO3_VERSION=^6.2
-    - php: 5.6
-      env: TYPO3_VERSION=^7.6
-    - php: 7.0
-      env: TYPO3_VERSION=^7.6 COVERAGE=1
     - php: 7.0
       env: TYPO3_VERSION=^8
+    - php: 7.1
+      env: TYPO3_VERSION=^8
+    - php: 7.2
+      env: TYPO3_VERSION=^8 COVERAGE=1
 
 env:
   global:
