--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
     }
   ],
   "require": {
-    "typo3/cms-core": ">=6.2.0",
-    "dwenzel/t3events": ">=0.31"
+    "typo3/cms-core": ">=8.7.0,<=8.7.99",
+    "dwenzel/t3events": ">=0.39"
   },
   "require-dev": {
     "phpunit/phpunit": "^4.8 || ^5.6",
@@ -32,9 +32,7 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "CPSIT\\T3eventsCourse\\Tests\\": "Tests",
-      "TYPO3\\CMS\\Core\\Tests\\": ".Build/vendor/typo3/cms/typo3/sysext/core/Tests/",
-      "TYPO3\\CMS\\Fluid\\Tests\\": ".Build/vendor/typo3/cms/typo3/sysext/fluid/Tests/"
+      "CPSIT\\T3eventsCourse\\Tests\\": "Tests"
     }
   },
   "replace": {
