--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     }
   ],
   "require": {
-    "typo3/cms-core": ">=8.7.0,<=8.7.99",
+    "php": "^7.2",
+    "typo3/cms-core": ">=8.7.0 || >=9.5.0",
     "dwenzel/t3events": "~1.1",
     "dwenzel/t3extension-tools": "~1.3"
   },
