--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,11 @@
     "php": "^7.2",
     "typo3/cms-core": ">=8.7.0 || >=9.5.0",
     "dwenzel/t3events": "~1.1",
-    "dwenzel/t3extension-tools": "~1.3"
+    "dwenzel/t3extension-tools": "~1.3",
+    "typo3/minimal": "^9"
   },
   "require-dev": {
-    "nimut/testing-framework": "^3.0"
+    "nimut/testing-framework": "^3.0 || ^4.0"
   },
   "autoload": {
     "psr-4": {
@@ -58,4 +59,3 @@
     }
   }
 }
-
