--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,14 @@
   ],
   "require": {
     "php": "^7.2",
-    "typo3/cms-core": ">=8.7.0 || >=9.5.0",
+    "typo3/cms-core": ">=8.7.0 || >=9.5.0 || >=10.4.0",
     "dwenzel/t3events": "~1.1",
-    "dwenzel/t3extension-tools": "~1.3",
-    "typo3/minimal": "^9"
+    "dwenzel/t3extension-tools": "~1.3 || >=10.4.0",
+    "typo3/minimal": ">=9"
   },
   "require-dev": {
-    "nimut/testing-framework": "^3.0 || ^4.0"
+    "nimut/testing-framework": "^3.0 || ^4.0",
+    "dwenzel/t3events": "dev-feature/version10compatible as 1.1.0"
   },
   "autoload": {
     "psr-4": {
@@ -54,6 +55,7 @@
   },
   "extra": {
     "typo3/cms": {
+      "extension-key": "t3events_course",
       "cms-package-dir": "{$vendor-dir}/typo3/cms",
       "web-dir": ".Build/Web"
     }
