--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,12 @@
   "require": {
     "php": "^7.2",
     "typo3/cms-core": ">=8.7.0 || >=9.5.0 || >=10.4.0",
-    "dwenzel/t3events": "~1.1",
+    "dwenzel/t3events": "dev-feature/version10compatible",
     "dwenzel/t3extension-tools": "~1.3 || >=10.4.0",
     "typo3/minimal": ">=9"
   },
   "require-dev": {
-    "nimut/testing-framework": "^3.0 || ^4.0",
-    "dwenzel/t3events": "dev-feature/version10compatible as 1.1.0"
+    "nimut/testing-framework": "^3.0 || ^4.0"
   },
   "autoload": {
     "psr-4": {
