--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "php": "^7.2",
     "typo3/cms-core": ">=8.7.0 || >=9.5.0 || >=10.4.0",
     "dwenzel/t3events": "dev-feature/version10compatible",
-    "dwenzel/t3extension-tools": "~1.3 || >=10.4.0",
+    "dwenzel/t3extension-tools": "dev-feature/version10compatible",
     "typo3/minimal": ">=9"
   },
   "require-dev": {
