--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,13 @@
     }
   ],
   "require": {
-    "php": "^7.2",
-    "typo3/cms-core": ">=8.7.0 || >=9.5.0 || >=10.4.0",
-    "dwenzel/t3events": "dev-feature/version10compatible",
-    "dwenzel/t3extension-tools": "dev-feature/version10compatible",
+    "php": "^7.2 || ^8.1",
+    "typo3/cms-core": ">=8.7.0 || >=9.5.0 || >=10.4.0 || >=11.5.0",
+    "dwenzel/t3events": "dev-feature/version11compatible",
     "typo3/minimal": ">=9"
   },
   "require-dev": {
-    "nimut/testing-framework": "^3.0 || ^4.0"
+    "nimut/testing-framework": "^3.0 || ^4.0 || ^6.0"
   },
   "autoload": {
     "psr-4": {
